# Task_forge

./: CMakeLists.txt  README.md
examples/: demo_basic_pool.cpp  demo_dag_scheduler.cpp
include/taskforge/: Logger.h  Task.h  TaskScheduler.h  ThreadPool.h
src/: Logger.cpp  Task.cpp  TaskScheduler.cpp  ThreadPool.cpp
